Gnome-Shell: [Message] Fix weird vertically alignment of '.event-time' class
* Add bottom padding same with .title class.

--- a/shell/sass/gnome-shell/_common.scss
+++ b/shell/sass/gnome-shell/_common.scss
@@ -1403,6 +1403,7 @@ StScrollBar {
 
     > .event-time {
       @include fontscaling($ref_size * 0.9);
+      padding: 0 0 4px; // same padding with '.title'
       color: $dim_fg_color;
     }
 
